# RandomSelection

./: .pro  App_Main.cpp  CMakeLists.txt  QtPrecompiled.h  README.md
ApplicationClass/: applicationShell.cpp  applicationShell.h
CoreControlWidgets/MainWindow/: CustomTitleBar.cpp  CustomTitleBar.h  mainWindow.cpp  mainWindow.h
CoreControlWidgets/MainWindow/CustomTitleBar/: CustomTitleBar.cpp  CustomTitleBar.h
Initialization/: Initialization.cpp  Initialization.h
VariablesStore/: variables.cpp  variables.h
